Toward customizeable chips

--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chip-icon/ban-chip-icon.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chip-icon/ban-chip-icon.component.html
@@ -1,14 +1,14 @@
 <error-spinner [isActive]="!banSummary" spinnerMessage="Looking for bans"></error-spinner>
-<ng-container *ngIf="banSummary?.banCount > 0 || false">
+<span *ngIf="hasBans"
+    [matTooltip]="banCount.toString() + ' bans found'">
+  <span *ngIf="banSummary">{{ banSummary?.banCount }}</span>
   <span
-    class="ban-count"
-    [matTooltip]="banSummary?.banCount + ' bans found'">
+    class="ban-count">
     <fa-icon
       [icon]="bannedIcon"
     ></fa-icon>
-    <span *ngIf="banSummary">{{ banSummary?.banCount }}</span>
   </span>
-
+<!-- 
   <span
     class="ban-count"
     [matTooltip]="'Ban Areas: ' + banSummary?.bannedAreas?.join(', ')">
@@ -17,5 +17,5 @@
       [icon]="bannedIcon"
     ></fa-icon>
     <span *ngIf="banSummary">{{ banSummary?.bannedAreas?.length }}</span>
-  </span>
-</ng-container>
+  </span> -->
+</span>
