--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -7,18 +7,18 @@
       [formControl]="formControls.playerIdentities">
       <player-selection-chip-list
         [playerSelection]="playerSelection"
-        [identities]="playerSelection.playerIdentitiesFull"
-      ></player-selection-chip-list>
-      <!-- <player-selection-chip
-        *ngFor="let identity of playerSelection.playerIdentitiesFull"
-        (click)="selectPlayer(identity)"
-        [playerSelection]="playerSelection"
-        [identity]="identity">
-        <ban-chip-icon
-          [identity]="identity"
-          [banSummary]="summaryLookup[identity.xuid]"
-          [banQuery]="getBanHistoryComponentByXuid(identity.xuid)"></ban-chip-icon>
-      </player-selection-chip> -->
+        [identities]="playerSelection.playerIdentitiesFull">
+        <ng-template let-identity>
+          <player-selection-chip
+            [playerSelection]="playerSelection"
+            [identity]="identity">
+            <ban-chip-icon
+              [identity]="identity"
+              [banSummary]="summaryLookup[identity.xuid]"
+              [banQuery]="getBanHistoryComponentByXuid(identity.xuid)"></ban-chip-icon>
+          </player-selection-chip>
+        </ng-template>
+      </player-selection-chip-list>
     </sunrise-player-selection>
     <div class="bottom">
       <mat-card>
