--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -7,15 +7,15 @@
       [formControl]="formControls.playerIdentities">
       <player-selection-chip-list
         [playerSelection]="playerSelection"
-        [identities]="playerSelection.playerIdentitiesFull">
+        [identities]="playerSelection.playerIdentitiesFull"
+        (selectionChange)="selectPlayer($event)">
         <ng-template let-identity>
           <player-selection-chip
             [playerSelection]="playerSelection"
             [identity]="identity">
             <ban-chip-icon
               [identity]="identity"
-              [banSummary]="summaryLookup[identity.xuid]"
-              [banQuery]="getBanHistoryComponentByXuid(identity.xuid)"></ban-chip-icon>
+              [banSummary]="summaryLookup[identity.xuid]"></ban-chip-icon>
           </player-selection-chip>
         </ng-template>
       </player-selection-chip-list>
