all tests working

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -30,6 +30,7 @@
     <apollo-gift-basket
       [playerIdentities]="selectedPlayerIdentities"
       [lspGroup]="undefined"
+      [usingPlayerIdentities]="true"
     ></apollo-gift-basket>
   </div>
 </div>
