--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
@@ -1,6 +1,10 @@
 @import '/src/variables.scss';
 
 mat-card {
+  .hide-content {
+    display: none;
+  }
+
   .item-selection-form-field {
     max-width: 400px;
     width: 100%;
@@ -10,5 +14,53 @@ mat-card {
   .quantity-form-field {
     width: 100px;
     margin-right: 10px;
+  }
+
+  .table-container {
+    max-height: 500px;
+    overflow: auto;
+    margin-top: 30px;
+
+    table {
+      width: 100%;
+
+      .mat-column-quantity {
+        width: 160px !important;
+
+        mat-form-field {
+          width: 80px !important;
+        }
+
+        fa-icon {
+          margin-left: 10px;
+          margin-right: 10px;
+        }
+      }
+
+      .mat-column-remove {
+        width: 50px !important;
+      }
+
+      .mat-row {
+        td {
+          padding-top: 10px !important;
+          padding-bottom: 10px !important;
+        }
+
+        fa-icon {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  .send-gift-basket-container {
+    margin-top: 100px;
+
+    .send-gift-basket {
+      padding: 7px 20px;
+      position: relative;
+      top: -7px;
+    }
   }
 }
