--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -15,6 +15,7 @@
       [playerIdentities]="selectedPlayerIdentities"
       [lspGroup]="undefined"
       [playerInventory]="selectedPlayerInventory"
+      [usingPlayerIdentities]="true"
     ></gravity-gift-basket>
   </div>
 </div>
