--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -31,6 +31,7 @@
     <sunrise-gift-basket
       [playerIdentities]="selectedPlayerIdentities"
       [lspGroup]="selectedLspGroup"
+      [usingPlayerIdentities]="matTabSelectedIndex === 0"
     ></sunrise-gift-basket>
   </div>
 </div>
