working displaying a table for apollo and sunrise, need to do extra logic around which t10Id to use from it's unique identity lookup API.

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
@@ -31,7 +31,7 @@
         <h2>Sunrise gift history page state</h2>
         <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
         <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
-        <sunrise-gift-history-results></sunrise-gift-history-results>
+        <sunrise-gift-history-results [currentPlayer]="currentPlayer"></sunrise-gift-history-results>
       </mat-card>
     </div>
   </div>
