--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
@@ -31,7 +31,7 @@
       <h2>Apollo gift history page state</h2>
       <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
       <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>      
-      <apollo-gift-history-results></apollo-gift-history-results>
+      <apollo-gift-history-results [currentPlayer]="currentPlayer" [usingPlayerIdentites]="matTabSelectedIndex == 0"></apollo-gift-history-results>
     </mat-card>
   </div>
 </div>
