--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.scss
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.scss
@@ -1,2 +1,37 @@
 @import '/src/variables.scss';
 
+table {
+    width: 100%;
+  }
+  
+  tr.detail-row {
+    height: 0;
+  }
+  
+  tr.element-row:not(.expanded-row):hover {
+    background: $table-tr-hover;
+  }
+  
+  tr.element-row:not(.expanded-row):active {
+    background: $table-tr-active;
+  }
+  
+  .element-row td {
+    border-bottom-width: 0;
+  }
+  
+  .element-detail {
+    overflow: hidden;
+    display: flex;
+  }
+  
+  .element-detail {
+    padding: $gap-table;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    & > * {
+      flex: 1 1 $width-mediaquery-sidebar-break;
+      margin: $gap-table;
+    }
+  }
