--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
@@ -4,7 +4,7 @@
       id="item-selection-input"
       type="text"
       matInput
-      placeholder="Select an item"
+      placeholder="Search for an item or item ID"
       formControlName="itemInput"
       required
       [matAutocomplete]="autoGroup"
@@ -36,7 +36,7 @@
   <button
     mat-raised-button
     color="primary"
-    (click)="addItemEmit()"
+    (click)="addItemEmitter()"
     [disabled]="!itemSelectionForm.valid"
   >
     Add Item
