gravity identity lookup investigation

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gravity/gravity-gift-history.component.html
@@ -14,7 +14,7 @@
       <mat-card>
         <h2>Gravity gift history page state</h2>
         <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
-        <gravity-gift-history-results [currentPlayer]="currentPlayer"></gravity-gift-history-results>
+        <gravity-gift-history-results [selectedPlayer]="selectedPlayer"></gravity-gift-history-results>
       </mat-card>
     </div>
   </div>
