wired up error spinner for sunrise

--- a/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/sunrise/sunrise-gift-history-results.component.html
@@ -3,7 +3,7 @@
       <h2>
           Sunrise Gift History
           <error-spinner
-            [isActive]="false"
+            [isActive]="isLoading"
             [error]="loadError"
             spinnerMessage="Loading"
             errorMessage="Failed to load"
