toward better fake api

--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -46,8 +46,7 @@
           [alwaysShow]="true"
           [canSubmit]="formGroup.valid"
           [canSubmitDisabledReason]="'Form is invalid'"
-          checkboxText="Check to verify ban"
-        >
+          checkboxText="Check to verify ban">
           Submit ban
         </verify-action-button>
       </mat-card-content>
