--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection-chip/player-selection-chip.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection-chip/player-selection-chip.component.html
@@ -1,5 +1,4 @@
-<span class="name"
-  [matTooltip]="nameTooltip">
+<span class="name" [matTooltip]="nameTooltip">
   {{ name || 'N/A' }}
 </span>
 <ng-content></ng-content>
