--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
@@ -65,9 +65,7 @@
 <ng-template #resultsView id="results-view">
   <div class="identity-results">
     <ng-content></ng-content>
-    <div class="default">
-      failure
-    </div>
+    <div class="default">failure</div>
   </div>
   <!-- 
     TODO: Remove
