--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chips/ban-chips.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chips/ban-chips.component.html
@@ -1,6 +1,8 @@
 <mat-chip-list>
-  <mat-chip *ngFor="let identity of playerSelection.playerIdentitiesFull"
-    [class.invalid-identity]="!!identity.error">
+  <mat-chip
+    *ngFor="let identity of playerSelection.playerIdentitiesFull"
+    [class.invalid-identity]="!!identity.error"
+  >
     <span class="name">
       {{ identity[playerSelection.playerIdType] || 'mystery' }}
     </span>
