xuid: BigInt and Tests

--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chips/ban-chips.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-chips/ban-chips.component.html
@@ -1,10 +1,10 @@
 <mat-chip-list>
   <mat-chip
-    *ngFor="let identity of playerSelection.playerIdentitiesFull"
+    *ngFor="let identity of playerSelection?.playerIdentitiesFull"
     [class.invalid-identity]="!!identity.error"
   >
     <span class="name">
-      {{ identity[playerSelection.playerIdType] || 'mystery' }}
+      {{ identity[playerSelection?.playerIdType] || 'mystery' }}
     </span>
     <fa-icon
       class="remove-player-icon"
