--- a/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
@@ -9,7 +9,7 @@
             errorMessage="Failed to load"
           ></error-spinner>
         </h2>
-        <ng-container *ngIf="isLoaded && !loadError; else failstate">
+        <!-- <ng-container *ngIf="isLoaded && !loadError; else failstate">
           <table mat-table [dataSource]="giftHistoryList" multiTemplateDataRows>
             <ng-container matColumnDef="requestingAgent">
               <th mat-header-cell *matHeaderCellDef>Requesting Agent</th>
@@ -27,9 +27,22 @@
                 {{ entry.giftInventory | humanize }}
               </td>
             </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-            <tr mat-row *matRowDef="let element; columns: columnsToDisplay" class="element-row"></tr>
+            <tr mat-row *matRowDef="let element; columns: columnsToDisplay" class="element-row"
+            ></tr>
           </table>
-        </ng-container>
+        </ng-container> -->
+        <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              This is the expansion title.
+            </mat-panel-title>
+            <mat-panel-description>
+              This is a summary of the content
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>This is the primary content of the panel: {{history.requestingAgent}}.</p>
+        </mat-expansion-panel>
     </mat-card-content>
   </mat-card>
