--- a/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/gravity/gravity-gift-history-results.component.html
@@ -9,51 +9,53 @@
             errorMessage="Failed to load"
           ></error-spinner>
         </h2>
-        <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              {{history.requestingAgent}}
-            </mat-panel-title>
-            <mat-panel-description>
-              {{history.giftSendDateUtc}}
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <div *ngIf="history.giftInventory.cars">
-            <h3>Cars: {{history.giftInventory.cars.length}}</h3>
-            <p *ngFor="let car of history.giftInventory.cars">
-              {{car.quantity}} {{car.description}} [{{car.itemId}}]
-            </p>
-          </div>
-          <div *ngIf="history.giftInventory.currencies">
-            <h3>Currencies: {{history.giftInventory.currencies.length}}</h3>
-            <p *ngFor="let currency of history.giftInventory.currencies">
-              {{currency.quantity}} {{currency.description}} [{{currency.itemId}}]
-            </p>
-          </div>
-          <div *ngIf="history.giftInventory.energyRefills">
-            <h3>Currencies: {{history.giftInventory.energyRefills.length}}</h3>
-            <p *ngFor="let energyRefill of history.energyRefills.currencies">
-              {{energyRefill.quantity}} {{energyRefill.description}} [{{energyRefill.itemId}}]
-            </p>
-          </div>
-          <div *ngIf="history.giftInventory.masteryKits">
-            <h3>Currencies: {{history.giftInventory.masteryKits.length}}</h3>
-            <p *ngFor="let masteryKit of history.giftInventory.masteryKits">
-              {{masteryKit.quantity}} {{masteryKit.description}} [{{masteryKit.itemId}}]
-            </p>
-          </div>
-          <div *ngIf="history.giftInventory.repairKits">
-            <h3>Currencies: {{history.giftInventory.repairKits.length}}</h3>
-            <p *ngFor="let repairKit of history.giftInventory.repairKits">
-              {{repairKit.quantity}} {{repairKit.description}} [{{repairKit.itemId}}]
-            </p>
-          </div>
-          <div *ngIf="history.giftInventory.upgradeKits">
-            <h3>Currencies: {{history.giftInventory.upgradeKits.length}}</h3>
-            <p *ngFor="let upgradeKit of history.giftInventory.upgradeKits">
-              {{upgradeKit.quantity}} {{upgradeKit.description}} [{{upgradeKit.itemId}}]
-            </p>
-          </div>
-        </mat-expansion-panel>
+        <ng-container *ngIf="isLoaded && !loadError; else failstate">
+          <mat-expansion-panel hideToggle *ngFor="let history of giftHistoryList">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                {{history.requestingAgent}}
+              </mat-panel-title>
+              <mat-panel-description>
+                {{history.giftSendDateUtc}}
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+            <ng-container *ngIf="history.giftInventory.cars">
+              <h3>Cars: {{history.giftInventory.cars.length}}</h3>
+              <p *ngFor="let car of history.giftInventory.cars">
+                {{car.quantity}} {{car.description}} [{{car.itemId}}]
+              </p>
+            </ng-container>
+            <ng-container *ngIf="history.giftInventory.currencies">
+              <h3>Currencies: {{history.giftInventory.currencies.length}}</h3>
+              <p *ngFor="let currency of history.giftInventory.currencies">
+                {{currency.quantity}} {{currency.description}} [{{currency.itemId}}]
+              </p>
+            </ng-container>
+            <ng-container *ngIf="history.giftInventory.energyRefills">
+              <h3>Energy Refills: {{history.giftInventory.energyRefills.length}}</h3>
+              <p *ngFor="let energyRefill of history.energyRefills.currencies">
+                {{energyRefill.quantity}} {{energyRefill.description}} [{{energyRefill.itemId}}]
+              </p>
+            </ng-container>
+            <ng-container *ngIf="history.giftInventory.masteryKits">
+              <h3>Mastery Kits: {{history.giftInventory.masteryKits.length}}</h3>
+              <p *ngFor="let masteryKit of history.giftInventory.masteryKits">
+                {{masteryKit.quantity}} {{masteryKit.description}} [{{masteryKit.itemId}}]
+              </p>
+            </ng-container>
+            <ng-container *ngIf="history.giftInventory.repairKits">
+              <h3>Repair Kits: {{history.giftInventory.repairKits.length}}</h3>
+              <p *ngFor="let repairKit of history.giftInventory.repairKits">
+                {{repairKit.quantity}} {{repairKit.description}} [{{repairKit.itemId}}]
+              </p>
+            </ng-container>
+            <ng-container *ngIf="history.giftInventory.upgradeKits">
+              <h3>Upgrade Kits: {{history.giftInventory.upgradeKits.length}}</h3>
+              <p *ngFor="let upgradeKit of history.giftInventory.upgradeKits">
+                {{upgradeKit.quantity}} {{upgradeKit.description}} [{{upgradeKit.itemId}}]
+              </p>
+            </ng-container>
+          </mat-expansion-panel>
+        </ng-container>
     </mat-card-content>
   </mat-card>
