--- a/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
+++ b/StewardClient/src/app/shared/views/gift-history-results/titles/apollo/apollo-gift-history-results.component.html
@@ -19,9 +19,15 @@
               {{history.giftSendDateUtc}}
             </mat-panel-description>
           </mat-expansion-panel-header>
-          <p>
-            {{history.giftInventory}}
-          </p>
+          <div *ngIf="history.giftInventory.credits">
+            <h3>Credits: {{history.giftInventory.credits}}</h3>
+          </div>
+          <ng-container *ngIf="history.giftInventory.cars">
+            <h3>Cars: {{history.giftInventory.cars.length}}</h3>
+            <p *ngFor="let car of history.giftInventory.cars">
+              {{car.quantity}} {{car.description}} [{{car.itemId}}]
+            </p>
+          </ng-container>
         </mat-expansion-panel>
       </ng-container>
   </mat-card-content>
