Moved gift basket form validation to a boolean check. Added spec tests to match requirements

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -117,12 +117,7 @@
               class="send-gift-basket"
               color="primary"
               type="submit"
-              [disabled]="
-                !sendGiftForm.valid ||
-                giftBasket?.data?.length <= 0 ||
-                (usingPlayerIdentities && playerIdentities?.length <= 0) ||
-                (!usingPlayerIdentities && !lspGroup)
-              "
+              [disabled]="!sendGiftForm.valid || !isGiftBasketReady"
             >
               Send Gift
               <span *ngIf="usingPlayerIdentities">To Player(s)</span>
