--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
@@ -1,4 +1,8 @@
-<form [formGroup]="itemSelectionForm" (ngSubmit)="addItemEmitter()">
+<form
+  [formGroup]="itemSelectionForm"
+  #formDirective="ngForm"
+  (ngSubmit)="addItemEmitter(formDirective)"
+>
   <mat-form-field class="item-selection-form-field">
     <input
       id="item-selection-input"
