changed font margin to ems

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.scss
@@ -34,8 +34,8 @@ mat-card {
         }
 
         fa-icon {
-          margin-left: 10px;
-          margin-right: 10px;
+          margin-left: 0.6em;
+          margin-right: 0.6em;
         }
       }
 
