--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
@@ -5,7 +5,6 @@
 >
   <mat-form-field class="item-selection-form-field">
     <input
-      id="item-selection-input"
       type="text"
       matInput
       placeholder="Search for an item or item ID"
@@ -31,7 +30,7 @@
   <mat-form-field class="quantity-form-field">
     <mat-label>Quantity</mat-label>
     <input
-      id="item-selection-quanity-input"
+      #quantity
       type="number"
       matInput
       placeholder="1"
